Safari overflow error Resolve #1

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,10 +10,12 @@ body {
   width: 100vw;
   margin: 0;
   font-family: "Raleway", sans-serif;
+  overflow: hidden;
 }
 .container {
   width: 100%;
   height: 100vh;
+  overflow: hidden;
 }
 /**
 *********************************************************
@@ -119,7 +121,7 @@ Timer Start
 .timer {
   position: relative;
   width: 100vw;
-  height: 33vh;
+  height: 35vh;
 }
 svg {
   position: absolute;
